log
Fri, Apr 18, 2025  9:11:51 PM: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:43:11: error: 'HashMap {aka struct HashMap}' has no member named 'key'
     newMap->key
           ^~
hashmap.c:44:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:45:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
eeef3b7
Fri, Apr 18, 2025  9:12:06 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:43:11: error: 'HashMap {aka struct HashMap}' has no member named 'key'
     newMap->key;
           ^~
a5b2d79
Fri, Apr 18, 2025  9:15:09 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c309bd9
Fri, Apr 18, 2025  9:18:58 PM: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
hashmap.c:46:5: error: expected ';' before 'return'
     return NULL;
     ^~~~~~
hashmap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
74f4d01
Fri, Apr 18, 2025  9:19:08 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
hashmap.c:46:5: error: expected ';' before 'return'
     return newMap;
     ^~~~~~
hashmap.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
1c1ea4f
Fri, Apr 18, 2025  9:19:21 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:44:5: error: statement with no effect [-Werror=unused-value]
     newMap size = 0;
     ^~~~~~
hashmap.c:44:12: error: expected ';' before 'size'
     newMap size = 0;
            ^~~~
cc1.exe: all warnings being treated as errors
8a069fa
Fri, Apr 18, 2025  9:19:54 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ed30424
Fri, Apr 18, 2025  9:21:11 PM: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:45:25: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
         newMap->current = NULL;
                         ^
cc1.exe: all warnings being treated as errors
a2886ed
